# Amazon-BSR-weekly-report

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.agents/skills/sorftime-bsr-sync/: .env.example  .gitignore  SKILL.md  requirements.txt
.agents/skills/sorftime-bsr-sync/references/: api-doc.md  bsr-category-list.md  table-schema.md
.agents/skills/sorftime-bsr-sync/scripts/: bsr_sync_weekly.sh
.agents/skills/sorftime-bsr-sync/scripts/sorftime_api/: README.md  __init__.py
.agents/skills/sorftime-bsr-sync/scripts/utils/: api_base.py  audit_log.py  base_config.py  common.py  constants.py  date_utils.py  log_filter.py  path_init.py  path_utils.py  retry.py
.agents/skills/sorftime-report-base-sync/: SKILL.md
.agents/skills/sorftime-report-base-sync/scripts/: report_parser.py  sync_report_to_base.py
.agents/skills/sorftime-report-base-sync/tests/: test_sync_report_to_base.py
.agents/skills/sorftime-weekly-report/: SKILL.md
.agents/skills/sorftime-weekly-report/agents/01-overview/: agent.md
.agents/skills/sorftime-weekly-report/references/: 04-summary.md  doris-execution.md
.agents/skills/sorftime-weekly-report/scripts/: generate_weekly_report.py  validate_report.py
.agents/workflows/: command_runner.py  publication_registry.py  run_sorftime_weekly_cron.sh  run_sorftime_weekly_workflow.py  sorftime-weekly-full-workflow.md
.codex/: config.toml
tests/: test_bsr_pipeline.py  test_command_runner.py  test_runner_publication.py  test_weekly_report_config.py
tests/fixtures/: minimal_report.md
(+27 files in other folders)
